--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
-	"homepage": "https://CharlesCatto.github.io/dev-tech-cards",
+	"homepage": "https://CharlesCatto.github.io/pick-your-meat",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
